--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <!--CUERPO PRINCIPAL DE LA PAGINA-->
         <main>
             <h2>La Zona Colonial</h2>
-            <img src="img/puerta.jpg" alt="puerta de la zona colonial">
+            <img src="img/puertaconde.jpg" alt="puerta de la zona colonial">
             <p>
                 La Ciudad Colonial (también llamada Zona Colonial) es el núcleo urbano más antiguo de la ciudad de Santo Domingo, capital de la República Dominicana. La Ciudad Colonial fue el primer asentamiento europeo permanente en América, fundada en 1502 por los colonizadores españoles.
             </p>
